--- a/Embed.toml
+++ b/Embed.toml
@@ -77,6 +77,6 @@ log_path = "./logs"
 
 [default.gdb]
 # Whether or not a GDB server should be opened after flashing.
-enabled = true
+enabled = false
 # The connection string in host:port format wher the GDB server will open a socket.
 gdb_connection_string = "127.0.0.1:1337"
